# haskell-build-acid

./: README.md  haskell-build-acid.cabal
cbits/: acid.c
clib/: Acid.hs  GenAcid.hs
include/: acid.h
