cabal-version:       2.2

name:                haskell-build-acid
version:             0.1.0.0
synopsis:            Acid test for Haskell builders
description:         Acid test for Haskell builders
homepage:            https://github.com/TravisWhitaker/haskell-build-acid
bug-reports:         https://github.com/TravisWhitaker/haskell-build-acid/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2025
category:            Testing
extra-source-files:  CHANGELOG.md, README.md

foreign-library acid
  type:             native-shared
  options:          standalone
  other-modules:    Acid
                    GenAcid
  hs-source-dirs:   clib
  include-dirs:     include
  install-includes: acid.h
  c-sources:        cbits/acid.c
  build-depends:    base
                  , template-haskell
  default-language: Haskell2010
  ghc-options:      -O2
                    -Wall
                    -Widentities
                    -Wredundant-constraints
                    -Wcompat
                    -Wno-type-defaults
                    -Wno-unused-local-binds
                    -Wno-unused-do-bind
                    -Wno-unused-matches
                    -Werror
                    -threaded
  if (os(darwin))
    ghc-options: -optP-Wno-nonportable-include-path

